Size adjusted UI

--- a/pannel/cashier.html
+++ b/pannel/cashier.html
@@ -30,24 +30,28 @@
     <div class="outwrap">
 
         <div class="side_nav">
-            <div class="inner_side_nav">
-                <li id="cashier" class="on_select">
-                    <div class="bgsect"></div>
-                    <div class="textdp"><i></i>Cashier</div>
-                </li>
-                <li id="reports">
-                    <div class="bgsecta"></div>
-                    <div class="textdp"><i></i>Reports</div>
-                </li>
-                <li id="history">
-                    <div class="bgsecta"></div>
-                    <div class="textdp"><i></i>History</div>
-                </li>
-            </div>
-            <div class="inner_side_nav_settings">
-                <li id="settings"><i></i>Settings</li>
-            </div>
+            <div class="side_nav2d">
+                <div class="inner_side_nav">
+                    <li id="cashier" class="on_select">
+                        <div class="bgsect"></div>
+                        <div class="textdp"><i></i>Cashier</div>
+                    </li>
+                    <li id="reports">
+                        <div class="textdp"><i></i>Reports</div>
+                    </li>
+                    <li id="history">
+                        <div class="textdp"><i></i>History</div>
+                    </li>
+                </div>
+                <div class="inner_side_nav_settings">
+                    <li id="settings">
+                        <div class="textdp">
+                            <i></i>Settings
+                        </div>
+                    </li>
+                </div>
 
+            </div>
         </div>
         <div class="middle_side">
 
@@ -73,6 +77,34 @@
                     </div>
                 </div>
                 <div class="products_content">
+                    <ol>
+                        <li><img src="../image/sample.png" alt="item"></li>
+                        <li>
+                            <h5>Beef patty</h5>
+                            <h4><b>₱45</b></h4>
+                        </li>
+                    </ol>
+                    <ol>
+                        <li><img src="../image/sample.png" alt="item"></li>
+                        <li>
+                            <h5>Beef patty</h5>
+                            <h4><b>₱45</b></h4>
+                        </li>
+                    </ol>
+                    <ol>
+                        <li><img src="../image/sample.png" alt="item"></li>
+                        <li>
+                            <h5>Beef patty with vagetables</h5>
+                            <h4><b>₱45</b></h4>
+                        </li>
+                    </ol>
+                    <ol>
+                        <li><img src="../image/sample.png" alt="item"></li>
+                        <li>
+                            <h5>Beef patty</h5>
+                            <h4><b>₱45</b></h4>
+                        </li>
+                    </ol>
                     <ol>
                         <li><img src="../image/sample.png" alt="item"></li>
                         <li>
