--- a/pannel/history.html
+++ b/pannel/history.html
@@ -29,25 +29,25 @@
     <div class="outwrap">
 
         <div class="side_nav">
-            <div class="inner_side_nav">
-                <li id="cashier">
-                    <div class=""></div>
-                    <div class="textdp"><i></i>Cashier</div>
-                </li>
-                <li id="reports">
-                    <div class=""></div>
-                    <div class="textdp"><i></i>Reports</div>
-                </li>
-                <li id="history" class="on_select">
-                    <div class="bgsect"></div>
-                    <div class="textdp"><i></i>History</div>
-                </li>
-            </div>
-            <div class="inner_side_nav_settings">
-                <li id="settings">
-                    <div class=""></div>
-                    <div class="textdp"><i></i>Settings</div>
-                </li>
+            <div class="side_nav2d">
+
+                <div class="inner_side_nav">
+                    <li id="cashier">
+                        <div class="textdp"><i></i>Cashier</div>
+                    </li>
+                    <li id="reports">
+                        <div class="textdp"><i></i>Reports</div>
+                    </li>
+                    <li id="history" class="on_select">
+                        <div class="bgsect"></div>
+                        <div class="textdp"><i></i>History</div>
+                    </li>
+                </div>
+                <div class="inner_side_nav_settings">
+                    <li id="settings">
+                        <div class="textdp"><i></i>Settings</div>
+                    </li>
+                </div>
             </div>
 
         </div>
@@ -64,7 +64,7 @@
                                 </li>
                                 <li>
                                     <h5>Reference No.</h5>
-                                    <p>7874445741</p>
+                                    <p>7874675445741</p>
                                 </li>
                                 <li>
                                     <h5>Date Time</h5>
@@ -78,7 +78,7 @@
                                 </li>
                                 <li>
                                     <h5>Reference No.</h5>
-                                    <p>7874445741</p>
+                                    <p>7874445567741</p>
                                 </li>
                                 <li>
                                     <h5>Date Time</h5>
@@ -92,7 +92,7 @@
                                 </li>
                                 <li>
                                     <h5>Reference No.</h5>
-                                    <p>7874445741</p>
+                                    <p>787466666666445741</p>
                                 </li>
                                 <li>
                                     <h5>Date Time</h5>
@@ -180,7 +180,7 @@
                         <h4>Reference No.</h4>
                     </ol>
                     <ol class="history_ordered">
-                        
+
                         <li>
                             <p>3</p>
                             <p>Beef patty sdsadadsd</p>
@@ -257,7 +257,7 @@
                             <p>₱121</p>
                         </li>
 
- 
+
                     </ol>
                     <ol>
                         <li>
@@ -277,6 +277,9 @@
                             <p>₱1351</p>
                         </li>
                     </ol>
+                    <div class="askReceipt">
+                        <button type="button" id="print_receipt">Print</button>
+                    </div>
                 </div>
             </div>
 
