--- a/pannel/reports.html
+++ b/pannel/reports.html
@@ -29,9 +29,9 @@
     <div class="outwrap">
 
         <div class="side_nav">
-            <div class="inner_side_nav">
+            <div class="side_nav2d">
+                <div class="inner_side_nav">
                 <li id="cashier" >
-                    <div class=""></div>
                     <div class="textdp"><i></i>Cashier</div>
                 </li>
                 <li id="reports" class="on_select">
@@ -39,15 +39,14 @@
                     <div class="textdp"><i></i>Reports</div>
                 </li>
                 <li id="history">
-                    <div class=""></div>
                     <div class="textdp"><i></i>History</div>
                 </li>
             </div>
             <div class="inner_side_nav_settings">
                 <li id="settings">
-                    <div class=""></div>
                     <div class="textdp"><i></i>Settings</div>
                 </li>
+            </div>
             </div>
             
         </div>
