--- a/pannel/settings.html
+++ b/pannel/settings.html
@@ -16,7 +16,8 @@
 
             <section>
                 <li><img src="../image/logo.png" alt="logo" id="logo"></li>
-                <li class="search"><input type="search" name="search" placeholder="Seach products..." id="search" onclick="funs()"><label for="search"><i class="fa " ></i></label></li>
+                <li class="search"><input type="search" name="search" placeholder="Seach products..." id="search"
+                        onclick="funs()"><label for="search"><i class="fa "></i></label></li>
             </section>
             <section>
                 <li class="first">r</li>
@@ -28,26 +29,26 @@
     <div class="outwrap">
 
         <div class="side_nav">
-            <div class="inner_side_nav">
-                <li id="cashier"  >
-                    <div class=""></div>
-                    <div class="textdp"><i></i>Cashier</div>
-                </li>
-                <li id="reports">
-                    <div class=""></div>
-                    <div class="textdp"><i></i>Reports</div>
-                </li>
-                <li id="history">
-                    <div class=""></div>
-                    <div class="textdp"><i></i>History</div>
-                </li>
+            <div class="side_nav2d">
+                <div class="inner_side_nav">
+                    <li id="cashier">
+                        <div class="textdp"><i></i>Cashier</div>
+                    </li>
+                    <li id="reports">
+                        <div class="textdp"><i></i>Reports</div>
+                    </li>
+                    <li id="history">
+                        <div class="textdp"><i></i>History</div>
+                    </li>
+                </div>
+                <div class="inner_side_nav_settings">
+                    <li id="settings" class="on_select">
+                        <div class="bgsect"></div>
+                        <div class="textdp"><i></i>Settings</div>
+                    </li>
+                </div>
             </div>
-            <div class="inner_side_nav_settings">
-                <li id="settings" class="on_select">
-                    <div class="bgsect"></div>
-                    <div class="textdp"><i></i>Settings</div>
-            </div>
-            
+
         </div>
         <div class="middle_side">
 
