--- a/pannel/settings.html
+++ b/pannel/settings.html
@@ -75,7 +75,7 @@
                     <h3><i class="fas fa-chart-pie"></i> Themes</h3>
                     <hr>
                     <div class="themes_select">
-                        <label for="theme1">
+                        <label for="theme1" id="theme1_cont" class="selected_class">
                             <div>
                                 <input type="radio" name="tm" id="theme1">
                             </div>
@@ -86,7 +86,7 @@
                                 <h4>Light</h4>
                             </div>
                         </label>
-                        <label for="theme2">
+                        <label for="theme2" id="theme2_cont">
                             <div>
                                 <input type="radio" name="tm" id="theme2">
                             </div>
@@ -97,7 +97,7 @@
                                 <h4>Monokai</h4>
                             </div>
                         </label>
-                        <label for="theme3">
+                        <label for="theme3" id="theme3_cont">
                             <div>
                                 <input type="radio" name="tm" id="theme3">
                             </div>
@@ -123,6 +123,7 @@
     <script src="../UX/jquery-3.5.1.min.js">
 
     </script>
+    <script src="../UX/settings.js"></script>
     <script src="../UX/script.js"></script>
 </body>
 
