--- a/pannel/settings.html
+++ b/pannel/settings.html
@@ -59,6 +59,11 @@
         </div>
         <div class="middle_side">
             <div class="settings_cont">
+                <div class="overlay_settings"></div>
+                <div class="notif_settings">
+                    <i class="fas fa-check"></i>
+                    <h5>Theme changed successfull sfdsfs y..</h5>
+                </div>
                 <ol>
                     <h3><i class="fas fa-user-cog"></i>Profiles and Account</h3>
                     <hr>
@@ -80,6 +85,7 @@
                                     <input type="radio" value="light" name="tm" id="light">
                                 </div>
                                 <div class="sample_theme">
+                                    <img src="../image/theme.png" alt="">
 
                                 </div>
                                 <div class="theme_name">
@@ -91,6 +97,7 @@
                                     <input type="radio" value="monokai" name="tm" id="monokai">
                                 </div>
                                 <div class="sample_theme">
+                                    <img src="../image/theme.png" alt="">
 
                                 </div>
                                 <div class="theme_name">
@@ -102,6 +109,7 @@
                                     <input type="radio" value="dark_modern" name="tm" id="dark_modern">
                                 </div>
                                 <div class="sample_theme">
+                                    <img src="../image/theme.png" alt="">
 
                                 </div>
                                 <div class="theme_name">
@@ -113,6 +121,18 @@
                             <button type="button" id="save_theme"><i class="fas fa-save"></i> Save Theme</button>
                         </div>
                 </ol>
+                <div class="confirm_change">
+                    <h5>Are you sure you want to change theme?</h5>
+                    <div>
+                        <section>
+                            <button type="button" id="changetheme_yes"><i class="fas fa-check"></i>Yes</button>
+                        </section>
+                        <section>
+                            <button type="button" id="changetheme_no"><i class="fas fa-plus"></i>No</button>
+                        </section>
+                    </div>
+
+                </div>
 
             </div>
         </div>
