--- a/pannel/history.html
+++ b/pannel/history.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../UX/jquery-3.5.1.min.js"></script>
+    <script src="../UX/script.js"></script>
     <link rel="stylesheet" href="../resources/style.css">
     <link rel="stylesheet" href="../resources/history.css">
     <link rel="stylesheet" href="../resources/fontawesome-free-5.15.4-web/css/all.css">
@@ -296,10 +298,7 @@
     </div>
 
 
-    <script src="../UX/jquery-3.5.1.min.js">
 
-    </script>
-    <script src="../UX/script.js"></script>
 </body>
 
 </html>
