--- a/pannel/myproducts.html
+++ b/pannel/myproducts.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <script src="../UX/jquery-3.5.1.min.js"></script>
+    <script src="../UX/products.js"></script>
+    <script src="../UX/script.js"></script>
     <link rel="stylesheet" href="../resources/style.css">
     <link rel="stylesheet" href="../resources/products.css">
     <link rel="stylesheet" href="../resources/fontawesome-free-5.15.4-web/css/all.css">
@@ -207,11 +211,6 @@
     </div>
 
 
-    <script src="../UX/jquery-3.5.1.min.js">
-
-    </script>
-    <script src="../UX/products.js"></script>
-    <script src="../UX/script.js"></script>
 </body>
 
 </html>
