--- a/pannel/overview.html
+++ b/pannel/overview.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../UX/jquery-3.5.1.min.js"></script>
+    <script src="../UX/script.js"></script>
+    <script src="../UX/overview.js"></script>
+    <script src="../UX/node_modules/chart.js/dist/chart.umd.js"></script>
     <link rel="stylesheet" href="../resources/style.css">
     <link rel="stylesheet" href="../resources/overview.css">
     <link rel="stylesheet" href="../resources/fontawesome-free-5.15.4-web/css/all.css">
@@ -110,12 +114,7 @@
     </div>
 
 
-    <script src="../UX/jquery-3.5.1.min.js">
 
-    </script>
-    <script src="../UX/script.js"></script>
-    <script src="../UX/overview.js"></script>
-    <script src="../UX/node_modules/chart.js/dist/chart.umd.js"></script>
 </body>
 
 </html>
