--- a/pannel/reports.html
+++ b/pannel/reports.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <script src="../UX/jquery-3.5.1.min.js"></script>
+    <script src="../UX/script.js"></script>
     <link rel="stylesheet" href="../resources/style.css">
     <link rel="stylesheet" href="../resources/reports.css">
     <link rel="stylesheet" href="../resources/fontawesome-free-5.15.4-web/css/all.css">
@@ -66,10 +69,7 @@
     </div>
 
 
-    <script src="../UX/jquery-3.5.1.min.js">
 
-    </script>
-    <script src="../UX/script.js"></script>
 </body>
 
 </html>
