--- a/pannel/settings.html
+++ b/pannel/settings.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../UX/jquery-3.5.1.min.js">
+    </script>
+    <script src="../UX/script.js"></script>
+    <script src="../UX/settings.js"></script>
     <link rel="stylesheet" href="../resources/style.css">
     <link rel="stylesheet" href="../resources/settings.css">
     <link rel="stylesheet" href="../resources/fontawesome-free-5.15.4-web/css/all.css">
@@ -62,7 +66,7 @@
                 <div class="overlay_settings"></div>
                 <div class="notif_settings">
                     <i class="fas fa-check"></i>
-                    <h5>Theme changed successfull sfdsfs y..</h5>
+                    <h5>Theme changed successfully...</h5>
                 </div>
                 <ol>
                     <h3><i class="fas fa-user-cog"></i>Profiles and Account</h3>
@@ -140,11 +144,7 @@
     </div>
 
 
-    <script src="../UX/jquery-3.5.1.min.js">
 
-    </script>
-    <script src="../UX/settings.js"></script>
-    <script src="../UX/script.js"></script>
 </body>
 
 </html>
