Remove bg link added kalokohan ano

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             </div>
         </div>
     </div>
+    <a href="" target="_blank"></a>
     <div class="myproducts">
         
     </div>
