Input error handled

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <option value="PWD">PWD</option>
                     </select>
                 </li>
-            </section>
+            </section><a href="" target="_top"></a>
         </div>
     </div>
 </body>
