thats it por 50%

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                     $(this).html(`<i class="fas fa-search"></i>Find producs`)
                 }
             });
+            setTimeout(() => {
+                $(".loadingScComboForm").addClass("newLoadingScComboForm");
+                $(".data-products ol").addClass("new-data-products");
+            }, 3000);
 
 
 
@@ -98,7 +102,41 @@
 
                                 <h3>Products selected</h3>
                                 <div class="data-products">
+                                    <div class="loadingScComboForm-outer">
 
+                                        <div class="loadingScComboForm">
+                                            <ol>
+                                                <li>
+                                                    <div>
+
+                                                    </div>
+                                                </li>
+                                                <li>
+
+                                                </li>
+                                            </ol>
+                                            <ol>
+                                                <li>
+                                                    <div>
+
+                                                    </div>
+                                                </li>
+                                                <li>
+
+                                                </li>
+                                            </ol>
+                                            <ol>
+                                                <li>
+                                                    <div>
+
+                                                    </div>
+                                                </li>
+                                                <li>
+
+                                                </li>
+                                            </ol>
+                                        </div>
+                                    </div>
                                     <ol>
                                         <li>
                                             <div>
