--- a/pannel/a.html
+++ b/pannel/a.html
@@ -4,32 +4,207 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../UX/jquery-3.5.1.min.js"></script>
     <script src="../UX/script.js"></script>
+    <!-- <script src="../UX/settings.js"></script> -->
     <link rel="stylesheet" href="../resources/style.css">
     <link rel="stylesheet" href="../resources/fontawesome-free-5.15.4-web/css/all.min.css">
-    <link rel="stylesheet" href="../resources/products.css">
+    <link rel="stylesheet" href="../resources/settings.css">
     <title>Document</title>
+    <script>
+        $(document).ready(function () {
+            let secSec = $(".secondForm").detach()
+            $(".middle_side").on("click", "#valF", function (e) {
+                let hasclass = $(".firstForm").hasClass("dpl");
+                if (hasclass) {
+                    let fn = $("#fname").val()
+                    let mn = $("#mname").val()
+                    let ln = $("#lname").val()
+                    let age = $("#age").val()
+                    if (ce(fn)) {
+                        $("#fname").addClass("emp")
+                    } else {
+                        $("#fname").removeClass("emp")
+                    }
+
+                    if (ce(mn)) {
+                        $("#mname").addClass("emp")
+                    } else {
+                        $("#mname").removeClass("emp")
+                    }
+
+                    if (ce(ln)) {
+                        $("#lname").addClass("emp")
+                    } else {
+                        $("#lname").removeClass("emp")
+                    }
+
+                    if (ce(age)) {
+                        $("#age").addClass("emp")
+                    } else {
+                        $("#age").removeClass("emp")
+                    }
+                    console.log("f: " + fn);
+                    console.log("mn: " + mn);
+                    console.log("ln: " + ln);
+                    console.log("age: " + age);
+
+
+                    if (
+                        !ce(fn) &&
+                        !ce(mn) &&
+                        !ce(ln) &&
+                        !ce(age)
+                    ) {
+
+                        $(".firstForm").removeClass("dpl")
+                        $(".secondForm").addClass("dpl")
+
+                    }
+
+                }
+            })
+            $(".middle_side").on("click", "#backCPINFO", function (e) {
+                let hasclass = $(".secondForm").hasClass("dpl");
+                if (hasclass) {
+
+                    $(".secondForm").removeClass("dpl")
+                    $(".firstForm").addClass("dpl")
+
+
+
+                }
+            })
+
+            function ce(arg) {
+                if (arg === "") {
+                    return true;
+                }
+                return false
+            }
+        });
+    </script>
 </head>
 
 <body>
+    <div class="middle_side">
 
-    <div class="categoryView-outer">
-        <div class="categoryView-inner">
-            <button type="button" id="exitviewCat" title="Cancel"  >
-                <i class="fas fa-plus"></i>
-            </button>
-            <div class="secCat">
-                <li>
-                    <p>150</p>
-                    <p>Item/s</p>
-                </li>
-                <ol>
-                    <p>Drinks</p>
-                    <p>Category name</p>
-                </ol>
+        <div class="cpw-outer">
+            <div class="cpw-inner">
+                <form id="changepw">
+                    <div class="headgg">
+                        <h3><i class="fas fa-key"></i> Change login credentials</h3>
+                        <button type="button" id="exitviewCat" title="Cancel">
+                            <i class="fas fa-plus" title="Cancel"></i>
+                        </button>
+                    </div>
+                    <li>
+                        <i class="fas fa-user"></i>
+                        <input id="Username" type="text" placeholder="Username...">
+                        <label for="Username">Username</label>
+                    </li>
+                    <li>
+                        <i class="fas fa-user"></i>
+                        <input id="name" type="text" placeholder="Name...">
+                        <label for="name">Name</label>
+                    </li>
+                    <li>
+                        <i class="fas fa-key"></i>
+                        <input id="curpw" type="text" placeholder="Current password...">
+                        <label for="curpw">Current password</label>
+                    </li>
+                    <li>
+                        <i class="fas fa-user-cog"></i>
+                        <input id="npw" type="text" placeholder="New password...">
+                        <label for="npw">New password</label>
+                    </li>
+                    <li>
+                        <i class="fas fa-user-cog"></i>
+                        <input id="cnpw" type="password" placeholder="Confirm new password...">
+                        <label for="cnpw">Confirm new password</label>
+                    </li>
+                    <button type="submit" id="submitNPW"><i class="fas fa-sync"></i> Change</button>
+                </form>
+                <div class="responseCpw">
+                    <p>Incorrect password.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="pinfo-outer">
+            <div class="pinfo-inner">
+                <form id="changepinfo">
+                    <div class="headgg">
+                        <h3><i class="fas fa-key"></i> Edit personal info</h3>
+                        <button type="button" id="exitEditPw" title="Cancel">
+                            <i class="fas fa-plus" title="Cancel"></i>
+                        </button>
+                    </div>
+                    <div class="dpSec">
+                        <div class="selP">
+                            <div class="imgwrSet">
+                                <img src="../image/dpTemplate.png" alt="">
+                            </div>
+                            <label for="imgSelect"><i class="fas fa-plus"></i></label>
+                        </div>
+                        <input type="file" id="imgSelect" name="imgSelect">
+                    </div>
+                    <div class="firstForm dpl">
+                        <li>
+                            <i class="fas fa-user"></i>
+                            <input id="fname" name="fn" type="text" placeholder="First name...">
+                            <label for="First name">First name</label>
+                        </li>
+                        <li>
+                            <i class="fas fa-user"></i>
+                            <input id="mname" name="mn" type="text" placeholder="Middle name...">
+                            <label for="Middle name">Middle name</label>
+                        </li>
+                        <li>
+                            <i class="fas fa-user"></i>
+                            <input id="lname" name="ln" type="text" placeholder="Last name...">
+                            <label for="Last name">Last name</label>
+                        </li>
+                        <li>
+                            <i class="fas fa-user"></i>
+                            <input id="age" name="age" type="text" placeholder="Age...">
+                            <label for="Age">Age</label>
+                        </li>
+                        <button type="button" id="valF">Next <i class="fas fa-arrow-right"></i></button>
+                    </div>
+
+                    <div class="secondForm">
+                        <li>
+                            <i class="fas fa-user"></i>
+                            <input id="Birthdate" name="bd" type="text" placeholder="Birthdate...">
+                            <label for="Birthdate">Birthdate</label>
+                        </li>
+                        <li>
+                            <i class="fas fa-user"></i>
+                            <input id="Address" name="addr" type="text" placeholder="Address...">
+                            <label for="Address">Address</label>
+                        </li>
+                        <li>
+                            <i class="fas fa-user"></i>
+                            <input id="Contactno" name="cn" type="text" placeholder="Contact no...">
+                            <label for="Contact no">Contact no</label>
+                        </li>
+                        <div class="botD">
+                            <button type="button" id="backCPINFO"><i class="fas fa-arrow-left"></i> Back</button>
+                            <button type="submit" id="submitCPINFO">Submit <i class="fas fa-arrow-right"></i></button>
+                        </div>
+                    </div>
+
+
+                </form>
+                <div class="responseCPINFO">
+                    <p>Incorrect password.</p>
+                </div>
             </div>
         </div>
     </div>
+
+
 </body>
 
 </html>
